<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context=".Myprofile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/okgit" />



        <TextView
            android:id="@+id/text1"
            style="@android:style/Widget.Holo.Light.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/name_denis_muthomi"
            android:textAlignment="textStart"
            android:textSize="30sp"
            android:textStyle="italic" />



    <TextView
            android:id="@+id/text2"
            style="@android:style/Widget.Holo.Light.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/track_android"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/text3"
            style="@android:style/Widget.Holo.Light.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/country_kenya"
            android:textSize="20sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/text4"
            style="@android:style/Widget.Holo.Light.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/email_muthomidenis62_gmail_com"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/text5"
            style="@android:style/Widget.Holo.Light.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/phone_no_254717936712"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/text6"
            style="@android:style/Widget.Holo.Light.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="Slack Name : Denis Muthomi"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="italic" />



</LinearLayout>